--- a/css/default.css
+++ b/css/default.css
@@ -20,6 +20,7 @@ body {
 	background: #fff url(blossoms.jpg) no-repeat bottom right; 
 	margin: 0; 
 	padding: 0;
+	text-align:center;
 	}
 p { 
 	margin-top: 0; 
@@ -49,9 +50,7 @@ abbr {
 	border-bottom: none;
 	}
 
-
-/* specific divs */
-header h1 { 
+h1 { 
 	background: transparent url(h1.gif) no-repeat top left;
 	margin-top: 10px;
 	display: block;
@@ -63,7 +62,7 @@ header h1 {
 	white-space: nowrap;
 	overflow: hidden;
 	}
-header h2 { 
+h2 { 
 	background: transparent url(h2.gif) no-repeat top left; 
 	margin-top: 58px; 
 	margin-bottom: 40px; 
@@ -82,7 +81,7 @@ header {
 
 .container {
 	clear: both; 
-	margin: 20px 20px 20px 10px; 
+	left-margin: auto; 
 	width: 160px; 
 	float: left;
 	text-align:center;
