--- a/css/default.css
+++ b/css/default.css
@@ -1,88 +1,53 @@
-/* css Zen Garden default style v1.02 */
-/* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
-
-/* This file based on 'Tranquille' by Dave Shea */
-/* You may use this file as a foundation for any new work, but you may find it easier to start from scratch. */
-/* Not all elements are defined in this file, so you'll most likely want to refer to the xhtml as well. */
-
-/* Your images should be linked as if the CSS file sits in the same folder as the images. ie. no paths. */
-
-
-/* basic elements */
-html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	background: #fff url(blossoms.jpg) no-repeat bottom right; 
-	margin-left: auto; 
-	padding: 0;
-	text-align:center;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
-
-h1 { 
-	background: transparent url(h1.gif) no-repeat top left;
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-h2 { 
-	background: transparent url(h2.gif) no-repeat top left; 
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
+* {
+	font-family: "Verdana", Arial, sans-serif;
 }
 
-.container {
-	clear: both; 
-	margin-left: auto; 
-	width: 160px; 
-	float: left;
+html {
+	background-color: #F0F0F0;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	color: #555753;
+	margin: 0;
+	padding: 0;
+}
+
+div {
+	margin: auto;
+	max-width: 600px;
+	width: 100%;
+}
+
+p {
+	margin-top: 0px;
+	text-align: center;
+}
+
+p.questions {
+	margin-top: 0;
+	text-align: left;
+}
+
+h1 {
 	text-align:center;
-	}
+   }
+
+h2 {
+	text-align: center;
+	font-style: italic;
+}
+
+h3 {
+	margin: 0px;
+	text-align: left;
+}
+	
+img {
+  	display:block;
+	margin:auto;
+	width:50%;
+	height: auto;
+}
+
