--- a/css/default.css
+++ b/css/default.css
@@ -9,9 +9,12 @@ html {
 }
 
 body {
-	color: #555753;
-	margin: 0;
-	padding: 0;
+	background-color: #e1ddd9;
+	font-size: 12px;
+	font-family: Verdana, Arial, Helvetica, SunSans-Regular, Sans-Serif;
+	color:#564b47;
+	margin: 20px 140px  20px 140px;
+	text-align: center;
 }
 
 form {
@@ -25,9 +28,12 @@ p {
 	text-align: center;
 }
 
-p.questions {
-	margin-top: 0;
+div.container {
+	width: 100%;
+	padding: 0px;
 	text-align: left;
+	background-color: #fff;
+	overflow: auto;
 }
 
 h1 {
