More CSS changes

--- a/css/default.css
+++ b/css/default.css
@@ -27,7 +27,7 @@ p {
 
 div.container {
 	max-width: 800px;
-	left-margin: auto;	
+	margin-left: auto;	
 	padding: 0px;
 	text-align: left;
 	background-color: #fff;
@@ -35,7 +35,7 @@ div.container {
 }
 
 div.password {
-	left-margin: auto;
+	margin-left: auto;
 	text-size: 20pt;
 	border: 2px solid black;
 	width: 50%;
