--- a/css/default.css
+++ b/css/default.css
@@ -11,7 +11,8 @@ body {
 	background-color: #e1ddd9;
 	font-size: 12px;
 	color:#564b47;
-	left-margin: auto;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
 }
 
@@ -27,7 +28,8 @@ p {
 
 div.container {
 	max-width: 800px;
-	margin-left: auto;	
+	margin-left: auto;
+	margin-right: auto;	
 	padding: 0px;
 	text-align: left;
 	background-color: #fff;
@@ -36,6 +38,7 @@ div.container {
 
 div.password {
 	margin-left: auto;
+	margin-right: auto;
 	text-size: 20pt;
 	border: 2px solid black;
 	width: 50%;
