--- a/css/default.css
+++ b/css/default.css
@@ -31,7 +31,6 @@ div.container {
 	margin-left: auto;
 	margin-right: auto;	
 	padding: 0px;
-	text-align: left;
 	background-color: #fff;
 	overflow: auto;
 }
@@ -39,9 +38,14 @@ div.container {
 div.password {
 	margin-left: auto;
 	margin-right: auto;
-	text-size: 20pt;
 	border: 2px solid black;
 	width: 50%;
+}
+
+div.password p {
+	font-size: 20pt;
+	margin: auto;
+	padding: auto;
 }
 
 h1 {
