--- a/css/default.css
+++ b/css/default.css
@@ -9,7 +9,6 @@ html {
 
 body {
 	background-color: #e1ddd9;
-	font-size: 12px;
 	color:#564b47;
 	margin-left: auto;
 	margin-right: auto;
@@ -22,6 +21,7 @@ form {
 }
 
 p {
+	font-size: 12pt;
 	margin-top: 0px;
 	text-align: center;
 }
@@ -65,7 +65,7 @@ h3 {
 img {
   	display:block;
 	margin:auto;
-	width:50%;
+	width:75%;
 	height: auto;
 }
 
